bulletin-board-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bulletin-board
  name: bulletin-board-deployment
  namespace: gocd
spec:
  ports:
  - nodePort: 30206
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: bulletin-board
  sessionAffinity: None
  type: LoadBalancer
