ingress-bulletin-board.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-gocd-server
  namespace: gocd
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: bulletin-board.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gocd-server
                port:
                  number: 8153
